VisibilityToggle: fix positioning
The presence of any other elements prior to the table (such as the refresh stats
banner) could mess up with the expected positioning of the toggle.

--- a/pootle/static/css/style.css
+++ b/pootle/static/css/style.css
@@ -366,6 +366,11 @@ td.stats-name a:hover > i + span,
 
 /* End hack */
 
+.browsing-table-wrapper
+{
+    position: relative;
+}
+
 
 /*
  * MAIN DIVs
